Bug 310442 - Closing window do not set focus on the input text field
Summary: Closing window do not set focus on the input text field
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: 0.5.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
: 322571 326054 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-11-21 12:07 UTC by xcojack@gmail.com
Modified: 2014-01-14 18:45 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.7.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description xcojack@gmail.com 2012-11-21 12:07:32 UTC
Hello,
By pressing shortcut CTRL + W on focused text-ui window with opened more than 2 chats, actual window is closing but after that opened chat doesn't have focus at the input text field.

Reproducible: Always

Steps to Reproduce:
1. Open chats with more than 1 contact
2. Press CTRL + W
Actual Results:  
Input text field don't get focus

Expected Results:  
Should works the same as by pressing close button on the tab in chat window
Comment 1 David Edmundson 2012-11-21 14:11:21 UTC
I can only reproduce this some of the time, maybe 10%?

I'm not sure what specific steps trigger it and what doesn't. Would be an interesting and useful investigation to do.

If anyone can find out (either with gamma ray or debug on QApplication::focusChanged) what the focused widget is when the tab is changed, that would be a super useful step into coming up with the _correct_ fix.
Comment 2 David Edmundson 2013-11-13 10:04:10 UTC
*** Bug 322571 has been marked as a duplicate of this bug. ***
Comment 3 David Edmundson 2013-11-13 10:04:33 UTC
*** Bug 326054 has been marked as a duplicate of this bug. ***
Comment 4 Peter Andreasen 2013-12-05 13:09:15 UTC
telepathy 0.7.0 on Fedora 19 and 20:
This problem also occurs when starting a new conversation by double clicking a contact in list, and when replying a message from a notification. Reproducible: always.
Comment 5 Dennis Schridde 2013-12-05 13:26:10 UTC
(In reply to comment #4)
> telepathy 0.7.0 on Fedora 19 and 20:
> This problem also occurs when starting a new conversation by double clicking
> a contact in list, and when replying a message from a notification.
> Reproducible: always.

I confirm this.
Comment 6 David Edmundson 2013-12-16 10:54:36 UTC
Git commit c9b1c3ef8a783e53ad1ebbc8556cda9df4f2cb94 by David Edmundson.
Committed on 16/12/2013 at 10:13.
Pushed by davidedmundson into branch 'kde-telepathy-0.7'.

Fix all focus related bugs

REVIEW: 114487

M  +3    -0    app/chat-window.cpp
M  +3    -1    lib/chat-widget.cpp

http://commits.kde.org/telepathy-text-ui/c9b1c3ef8a783e53ad1ebbc8556cda9df4f2cb94