Fix all focus related bugs

REVIEW: 114487
BUG: 310442